<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity2">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FFFFFF" />

            <EditText
                android:id="@+id/edtInputContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noi_dung"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/edtInputRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/s_sao"
                android:inputType="number"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD"
                android:visibility="visible" />

            <Button

                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                android:visibility="visible" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>