<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FFFFFF" />

            <EditText
                android:id="@+id/edtInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nhap_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/edtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nhap_email" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ADD"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Open activity2"
                android:visibility="visible" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>